improvment in error handler
